--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "326_fit_together",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
-  "scripts": {
-    "start": "node app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bhagattirth/326_Fit_Together.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/bhagattirth/326_Fit_Together/issues"
-  },
-  "homepage": "https://github.com/bhagattirth/326_Fit_Together#readme"
+	"name": "326_fit_together",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"directories": {
+		"doc": "docs"
+	},
+	"scripts": {
+		"start": "node /server/app.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/bhagattirth/326_Fit_Together.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/bhagattirth/326_Fit_Together/issues"
+	},
+	"homepage": "https://github.com/bhagattirth/326_Fit_Together#readme"
 }
