--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"doc": "docs"
 	},
 	"scripts": {
-		"start": "node /server/app.js"
+		"start": "node ./server/app.js"
 	},
 	"repository": {
 		"type": "git",
