--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
 	"bugs": {
 		"url": "https://github.com/bhagattirth/326_Fit_Together/issues"
 	},
+	"dependencies": {
+		"bcrypt": "^5.1.0",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"express": "^4.18.2",
+		"jsonwebtoken": "^8.5.1"
+	},
 	"homepage": "https://github.com/bhagattirth/326_Fit_Together#readme"
 }
