--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,10 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "env": "^0.0.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1"
   },
-  "devDependencies": {},
   "keywords": [],
   "description": ""
 }
