--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
-		"jsonwebtoken": "^8.5.1"
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^6.7.2"
 	},
 	"homepage": "https://github.com/bhagattirth/326_Fit_Together#readme"
 }
