--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.7.2"
+		"mongoose": "^6.7.2",
+		"uniqid": "^5.4.0"
 	},
 	"homepage": "https://github.com/bhagattirth/326_Fit_Together#readme"
 }
