--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,9 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.2"
   },
-  "devDependencies": {},
   "keywords": [],
   "description": ""
 }
